Do the about page logic and finishing touches

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,7 @@ nav button:hover {
   border-radius: 16px;
   margin-top: 24px;
   font-size: 3rem;
+  letter-spacing: -2px;
 }
 
 .container {
@@ -113,6 +114,7 @@ nav button:hover {
   width: 11vw;
   color: oklch(100% 0.00011 271.152);
   line-height: 0.9;
+  letter-spacing: -2px;
 }
 
 .hero::first-letter {
@@ -209,4 +211,29 @@ span {
 .menu-item {
   width: 80%;
   font-size: 17px;
+}
+
+.about-header {
+  font-size: 3rem;
+  letter-spacing: -2px;
+  line-height: 0.9;
+  color: oklch(29.3% 0.066 243.157);
+}
+
+.about-hero {
+  font-size: 2.75rem;
+  letter-spacing: -2px;
+  line-height: 0.9;
+  width: 17vw;
+  color: oklch(100% 0.00011 271.152);
+}
+
+.about-container {
+  width: 25vw;
+  height: 75vh;
+  margin-top: 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
 }
